--- a/movies/package.json
+++ b/movies/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
